# goodharts_law

./: .gitignore  CLAUDE.md  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.rocm  IMMEDIATE_NEXT_STEPS.txt  README.md  ROADMAP.md  TODO.txt  agent.py  behaviors.py  benchmark_agents.py  compose.yaml  config.default.toml  constants.py  debug_agent.py  debug_drive.py  debug_models.py  debug_vec_env.py  docker_directions.txt  environment.py  main.py  notebook_template.ipynb  profile_sim.py  pyproject.toml  reproduction_train.py  requirements.txt  run_experiment.ipynb  simulation.py  test_imports.py  verify_goodhart.py
agents/: organism.py
behaviors/: __init__.py  base.py  greedy_food_seeker.py  learned.py  omniscient.py  proxy_seeker.py
configs/: default_config.py
docs/: GOODHART_META_MOMENT.md  evaluation_protocol.md  goodhart_self_proven.md  optimization_journey.md
environments/: base.py  world.py
goodharts/: __init__.py  config.py  modes.py  simulation.py  visualization.py
models/: ground_truth.pth  proxy_trained.pth  test_model.pth
scripts/: analyze_trace.py  analyze_trace_gaps.py  analyze_trace_window.py  benchmark_agents.py  brain_view.py  debug_drive.py  evaluate.py  parallel_stats.py  profile_sim.py  rocprof_training.sh  run_full_evaluation.sh  test_cuda_graphs.py  test_respawn_randomness.py  trace_gpu_sync.py  trace_training.py
tests/: conftest.py  test_action_space.py  test_agents.py  test_behavior_system.py  test_behaviors.py  test_checkpoint_roundtrip.py  test_cnn_shape.py  test_config.py  test_dashboard_sync.py  test_deep_learning_sanity.py  (+20 more)
(+95 files in other folders)
