[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goodharts_law"
version = "0.1.0"
description = "Simulation of Goodhart's Law with RL agents"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["goodharts*"]
